<resources>
    <string name="app_name">Materialistic Mimic</string>
    <string name="vote_up">Vote Up</string>
    <string name="save">Save</string>
    <string name="article">Article</string>
    <string name="pref_theme">pref_theme</string>
    <string name="pref_text_size">pref_text_size</string>
    <string name="pref_font">pref_font</string>
    <string name="pref_daynight_auto">pref_daynight_auto</string>
    <string name="konami">You got the Konami code! Give me 5 stars?</string>
    <string name="pref_navigation_vibrate">pref_navigation_vibrate</string>
    <string name="hint_nav_short">Swipe \u2191 \u2193 \u2192 \u2190 to navigate \nLong press to reposition</string>
    <string name="no_playstore">No PlayStore App Found</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="title_activity_list">Top Stories</string>
    <string name="more">More</string>
    <string name="saved">Saved %1$s ago</string>
    <string name="loading_text">...</string>
    <string name="voted">Successfully voted</string>
    <string name="view_in_browser">View in external browser</string>
    <string name="toast_saved">Story saved</string>
    <string name="toast_removed">Story unsaved</string>
    <string name="font_options">Font options</string>
    <string name="readability">Readability</string>
    <string name="hn_link">Hacker News Link</string>
    <string name="article_link">Article Link</string>
    <string name="search">Search</string>
    <string name="reset_settings">Reset All Settings</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="clear_drafts">Clear All Drafts</string>
    <string name="send">String</string>
    <string name="submission_guidelines">Submission Guidelines</string>
    <string name="save_draft">Save Draft</string>
    <string name="discard_draft">Discard Draft</string>
    <string name="formatting_guidelines">HN Formatting Guidelines</string>
    <string name="quote">Quote</string>
    <string name="add_comment">Add Comment</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="view_user">View User</string>
    <string name="clear_all">Clear All</string>
    <string name="export">Export</string>
    <string name="clear_selected">Clear Selected</string>
    <string name="display_options">Display Options</string>
    <string name="list_display_options">List Display Options</string>
    <string name="range">Range</string>
    <string name="popular_range_last_24h">Last 24h</string>
    <string name="popular_range_past_week">Past Week</string>
    <string name="popular_range_past_month">Past Month</string>
    <string name="popular_range_past_year">Past Year</string>
    <string name="search_sort_recent">More Recent</string>
    <string name="search_sort_popularity">Popularity</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="title_activity_popular">Catch Up</string>
    <string name="title_activity_new">New Stories</string>
    <string name="more_sections">More Sections</string>
    <string name="title_activity_best">Best Stories</string>
    <string name="title_activity_show">Show HN</string>
    <string name="title_activity_ask">Ask HN</string>
    <string name="title_activity_jobs">Jobs</string>
    <string name="title_activity_favorite">Saved Stories</string>
    <string name="title_activity_user">Mr Profile</string>
    <string name="title_activity_submit">Submit To HN</string>
    <string name="action_settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="application_info_title">Application Info</string>
    <string name="developer_info_title">Developer Info</string>
    <string name="libraries_title"><![CDATA[Libraries & Resources]]></string>
    <string name="license_title">License</string>
    <string name="third_party_licenses_title">3rd Party Licenses</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_note">Your credentials will be stored securely under your device's Settings / Account</string>
    <string name="create_account">Create account</string>
    <string name="comment_hint">Comment</string>
    <string name="sending">Sending...</string>
    <string name="item_exist">Similar story has been submitted</string>


    <string name="application_info_text">
        <![CDATA[
            <p>Version: %1$s (%2$d)</p>
            <p>This application is open source at <a href="https://github.com/hidroh/materialistic">github.com/hidroh/materialistic</a></p>
        ]]>
    </string>
    <string name="offline">Offline</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_release">What\'s New</string>
    <string name="comments">Comments</string>
    <string name="read_more">Read all %1$d lines</string>
    <string name="end_of_thread">End Of Thread</string>
    <string name="pref_username">pref_username</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="theme_sepia">Sepia</string>
    <string name="theme_green">Green</string>
    <string name="theme_solarized">Solarized</string>
    <string name="theme_solarized_dark">Solarized Dark</string>
    <string name="submit_content_hint">URL or text</string>
    <string name="submit_note">Enter text to submit a question for discussion, or URL to submit a link. You can also share links directly from other apps</string>
    <string name="love_it">I Love It</string>
    <string name="got_it">Got it</string>
    <string name="try_me">Long press/swipe one to save it for later</string>
    <string name="no_saved_stories">No saved stories so far</string>
    <string name="no_comments">It\'s still quiet here</string>
</resources>