<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:targetApi="HONEYCOMB">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_header_height">
        
        <ImageView
            android:src="?attr/backgroundDrawerHeader"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Login" />
        
        <com.example.materialisticmimic.widget.TintableTextView
            android:id="@+id/drawer_account"
            android:text="@string/login"
            android:textColor="?android:attr/textColorPrimary"
            app:iconStart="@drawable/ic_lock_white_24dp"
            android:layout_gravity="bottom"
            android:paddingRight="88dp"
            style="@style/DrawerTextStyle" />

        <ImageButton
            android:id="@+id/drawer_logout"
            android:src="@drawable/ic_power_settings_new_white_24dp"
            android:contentDescription="@string/logout"
            app:tint="?android:attr/textColorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_gravity="bottom|end"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_width="wrap_content" />

    </FrameLayout>

    <View
        android:background="@color/blackT12"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/drawer_list"
        android:text="@string/title_activity_list"
        app:iconStart="@drawable/ic_trending_up_white_24dp"
        style="@style/DrawerTextStyle"/>

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/drawer_popular"
        android:text="@string/title_activity_popular"
        app:iconStart="@drawable/ic_history_white_24dp"
        style="@style/DrawerTextStyle"/>

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/drawer_new"
        android:text="@string/title_activity_new"
        app:iconStart="@drawable/ic_new_releases_white_24dp"
        style="@style/DrawerTextStyle"/>

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/drawer_more"
        style="@style/DrawerTextStyle"
        android:text="@string/more_sections"
        app:iconEnd="@drawable/ic_expand_more_white_24dp"
        app:iconStart="@drawable/ic_dummy_transparent_24dp" />

    <LinearLayout
        android:id="@+id/drawer_more_container"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.materialisticmimic.widget.TintableTextView
            android:id="@+id/drawer_best"
            android:text="@string/title_activity_best"
            app:iconStart="@drawable/ic_thumb_up_white_24dp"
            style="@style/DrawerTextStyle"/>

        <com.example.materialisticmimic.widget.TintableTextView
            android:id="@+id/drawer_show"
            android:text="@string/title_activity_show"
            app:iconStart="@drawable/ic_done_white_24dp"
            style="@style/DrawerTextStyle"/>

        <com.example.materialisticmimic.widget.TintableTextView
            android:id="@+id/drawer_ask"
            android:text="@string/title_activity_ask"
            app:iconStart="@drawable/ic_live_help_white_24dp"
            style="@style/DrawerTextStyle"/>

        <com.example.materialisticmimic.widget.TintableTextView
            android:id="@+id/drawer_job"
            android:text="@string/title_activity_jobs"
            app:iconStart="@drawable/ic_work_white_24dp"
            style="@style/DrawerTextStyle"/>
    </LinearLayout>

    <View
        android:background="@color/blackT12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider" />

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/drawer_favorite"
        android:text="@string/title_activity_favorite"
        app:iconStart="@drawable/ic_bookmark_white_24dp"
        style="@style/DrawerTextStyle"/>

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/drawer_user"
        android:text="@string/title_activity_user"
        app:iconStart="@drawable/ic_person_white_24dp"
        style="@style/DrawerTextStyle"/>

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/drawer_submit"
        android:text="@string/title_activity_submit"
        app:iconStart="@drawable/ic_add_white_24dp"
        style="@style/DrawerTextStyle"/>

    <View
        android:background="@color/blackT12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider" />

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/drawer_feedback"
        android:text="@string/feedback"
        app:iconStart="@drawable/ic_feedback_white_24dp"
        style="@style/DrawerTextStyle"/>

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/drawer_settings"
        android:text="@string/action_settings"
        app:iconStart="@drawable/ic_settings_white_24dp"
        style="@style/DrawerTextStyle"/>

</LinearLayout>