<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_username"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:nextFocusDown="@id/edittext_password"
                android:nextFocusForward="@id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:targetApi="honeycomb" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_password"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        
        <TextView
            android:text="@string/login_note"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <LinearLayout
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/register_button"
                android:text="@string/create_account"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <Button
                android:id="@+id/login_button"
                android:text="@string/login"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>