<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    tools:background="?attr/colorPrimary">

    <com.example.materialisticmimic.widget.TextView
        android:id="@android:id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="..."
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textSize="@dimen/titleTextSize"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />

    <LinearLayout
        android:id="@+id/meta_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text2"
        android:layout_toLeftOf="@id/action_container"
        android:layout_toStartOf="@id/action_container"
        android:layout_alignTop="@id/action_container"
        android:layout_alignBottom="@id/action_container"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..."
            android:textSize="14sp"
            android:textStyle="italic"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="example.com" />

        <TextView
            android:id="@+id/posted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..."
            android:textSize="14sp"
            tools:text="2 days ago" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text2"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.example.materialisticmimic.widget.IconButton
            android:id="@+id/vote_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/vote_up"
            android:padding="8dp"
            android:src="@drawable/ic_thumb_up_white_24dp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <com.example.materialisticmimic.widget.IconButton
            android:id="@+id/bookmarked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/save"
            android:padding="8dp"
            android:src="@drawable/ic_bookmark_border_white_24dp"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <com.example.materialisticmimic.widget.TintableTextView
        android:id="@+id/button_article"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_below="@id/meta_container"
        android:layout_alignEnd="@+id/action_container"
        android:layout_alignRight="@+id/action_container"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:text="@string/article"
        android:textAllCaps="true"
        android:visibility="gone"
        app:iconEnd="@drawable/ic_open_in_browser_white_24dp"
        app:textAllCaps="true"
        tools:visibility="visible" />

</RelativeLayout>